--- a/mote.html
+++ b/mote.html
@@ -218,7 +218,7 @@
 <hr>
 			<div id="postmort">
 			<p>
-				My first adventure into Open Source, at HackNY I listened to an API talk by <a href="https://github.com/ianjennings"> Ian Jennings</a> about his app <a href="Mote.io">Mote.io</a>. He said that at least four of the different remotes for the app were made from Open Source development, some even at hackathons.
+				My first adventure into Open Source, at HackNY I listened to an API talk by <a href="https://github.com/ianjennings"> Ian Jennings</a> about his app <a href="www.Mote.io">Mote.io</a>. He said that at least four of the different remotes for the app were made from Open Source development, some even at hackathons.
 			</p><br>
 			<p> Our actual hack for the hackathon ended up not taking too much time, and I decided to spend some time working on a side project. I looked into how making a new remote worked, and I decided this would be a fun project to do, teaching me JQuery in the process. I first started working on a stumbleupon remote, but then realized that stumbleupon doesn't really lend itself to being navigated by simple clicks.
 			</p><br>
