Added link to live app

--- a/stories.html
+++ b/stories.html
@@ -230,7 +230,7 @@
 				My primary responsbility was setting up, and configuring reading and writing to the database. I looked into MongoDB, and found PyMongo, as we were using python as our backend. Charles headed up the Flask, Jen tackled HTML templates, and Jeff manned the CSS and Ajax.
 			</p> <br>
 			<p> 
-				The repository for our application is <a href="https://github.com/GriffinBrodman/Stories"> here </a> and the app is hosted live <a href=""> here</a>.
+				The repository for our application is <a href="https://github.com/GriffinBrodman/Stories"> here </a> and the app is hosted live <a href="http://www.shareastory.net/"> here</a>.
 			</p>
 			
 			</div>
