Fixed Jeff's site take three

--- a/stories.html
+++ b/stories.html
@@ -221,7 +221,7 @@
 <hr>
 			<div id="postmort">
 			<p>
-				For HackNY, my first hackathon, my friend <a href="https://www.jefftao.com">Jeff</a> and I decided we wanted to make a way to easily share stories across different platforms. Our aim was something more minimalist than a blog, something like pastebin but built for stories, or messages. Something that looked really nice, but also something so simple that those less technically inclined would feel comfortable with it.
+				For HackNY, my first hackathon, my friend <a href="http://www.jefftao.com">Jeff</a> and I decided we wanted to make a way to easily share stories across different platforms. Our aim was something more minimalist than a blog, something like pastebin but built for stories, or messages. Something that looked really nice, but also something so simple that those less technically inclined would feel comfortable with it.
 			</p><br>
 			<p>
 				Once we got to the hackathon, we ended up drafting two fellow students into our group, <a href="http://charlesjianlai.com/"> Charles</a> and Jen. We then divided into groups, but the workload was light enough that we all got a chance to be involved with every level of development.
