--- a/mote.html
+++ b/mote.html
@@ -212,7 +212,7 @@
 
 			<div id="project_text">
 			<p>
-				Use your phone as a remote, now for imgur! Ever wanted to browse imgur with your friends, or by yourself, but get tired of continiously pressing the right key? Now you can just use your phone as a remote, and browse with comfort.
+				Use your phone as a remote, now for imgur! Ever wanted to browse imgur with your friends, or by yourself, but get tired of continuously pressing the right key? Now you can just use your phone as a remote, and browse with comfort.
 			</p>
 			</div>
 <hr>
