--- a/stories.html
+++ b/stories.html
@@ -215,7 +215,7 @@
 
 			<div id="project_text">
 			<p>
-				Ever had a story or message you had to share with multiple groups of people? Tired of typing up a story on facebook, then copy pasting it to a friend on skype, before ultimately texting the entire thing up again to another friend? No more! With Stories, write once, share everywhere.
+				Ever had a story or message you had to share with multiple groups of people? Tired of typing up a story on facebook, then copy pasting it to a friend on Skype, before ultimately texting the entire thing up again to another friend? No more! With Stories, write once, share everywhere.
 			</p>
 			</div>
 <hr>
@@ -227,7 +227,7 @@
 				Once we got to the hackathon, we ended up drafting two fellow students into our group, <a href="http://charlesjianlai.com/"> Charles</a> and Jen. We then divided into groups, but the workload was light enough that we all got a chance to be involved with every level of development.
 			</p><br>
 			<p>
-				My primary responsbility was setting up, and configuring reading and writing to the database. I looked into MongoDB, and found PyMongo, as we were using python as our backend. Charles headed up the Flask, Jen tackled HTML templates, and Jeff manned the CSS and Ajax.
+				My primary responsibility was setting up, and configuring reading and writing to the database. I looked into MongoDB, and found PyMongo, as we were using python as our backend. Charles headed up the Flask, Jen tackled HTML templates, and Jeff manned the CSS and Ajax.
 			</p> <br>
 			<p> 
 				The repository for our application is <a href="https://github.com/GriffinBrodman/Stories"> here </a> and the app is hosted live <a href="http://www.shareastory.net/"> here</a>.
