--- a/beck.html
+++ b/beck.html
@@ -208,7 +208,7 @@
 			
 			<p id="page_subtitle">Farseer, XNA</p>
 			<br>
-			<img id="project_image" src="beck.jpg" width = "250">
+			<img id="project_image" src="title.png" width = "250">
 
 			<div id="project_text">
 			<p>
