--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 				<a class="project" href="beck.html">
 					<div class="imgcontain">
-						<img src="beck.png" alt="placeholder image"\>
+						<img src="end.png" alt="placeholder image"\>
 					</div>
 					<h3>Beck & Chuck</h3>
 					<p class="minidescription">
