--- a/beck.html
+++ b/beck.html
@@ -222,7 +222,11 @@
 			</p><br>
 			<p>
 				Right now the project is very much a work in progress, updates will soon follow.
+			</p><br>
+			<p>
+				A link to the playable alpha can be found <a href="Alpha.zip"> here </a>. Press enter to get past splash screens, left click to shoot, right click to teleport the ball to you, consuming a charge. Press space to consume a charge, and super charge Chuck for a few seconds. WSAD to move.
 			</p>
+
 			
 			</div>
 <br>
