--- a/beck.html
+++ b/beck.html
@@ -210,12 +210,15 @@
 			<br>
 			<img id="project_image" src="title.png" width = "250">
 
+
+
 			<div id="project_text">
 			<p>
 				Chuck the Ball! Play as Beck, a young acrobatic rebel, as she fights her way through a factory, killing robots by throwing Chuck at them.
 			</p>
 			</div>
 <hr>
+<iframe width="560" height="315" src="//www.youtube.com/embed/tBpJKpnZjPk?rel=0" frameborder="0" allowfullscreen></iframe>
 			<div id="postmort">
 			<p>
 				I am currently taking a Game Design class in college, and this is my group's semester long project.
