--- a/boids.html
+++ b/boids.html
@@ -218,7 +218,7 @@
 <hr>
 			<div id="postmort">
 			<p>
-				A project done in high school, this was a simulation of Craig Reynold's 1986 <a href="http://www.red3d.com/cwr/boids/"> Boids experiment</a> . We gave a few actors on a stage a  few simple rules, such as "All boids tend to move toward the center of motion". All of these simple rules together created complex behaviors, flocking behavior in this case. This was an example of emergent property. My partner handled the integration and calculus, and I wrote the logical rules, designed the system, and implemented our GUI.
+				This group project was a simulation of Craig Reynold's 1986 <a href="http://www.red3d.com/cwr/boids/"> Boids experiment</a> . We gave a few actors on a stage a  few simple rules, such as "All boids tend to move toward the center of motion". All of these simple rules together created complex behaviors, flocking behavior in this case. This was an example of emergent property. My partner handled the integration and calculus, and I wrote the logical rules, designed the system, and implemented our realtime GUI for changing system parameters.
 			</p>
 			
 			</div>
