--- a/beck.html
+++ b/beck.html
@@ -183,6 +183,14 @@
 				margin-top: 20px;
 			}
 
+			#trailer
+			{
+				margin-left: auto;
+				margin-right: auto;
+				float: none;
+				display: block;
+			}
+
 			hr {
 				margin-top: -100px;
 			visibility: visible;
@@ -218,7 +226,7 @@
 			</p>
 			</div>
 <hr>
-<iframe width="560" height="315" src="//www.youtube.com/embed/tBpJKpnZjPk?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe id="trailer" width="560" height="315" src="//www.youtube.com/embed/tBpJKpnZjPk?rel=0" frameborder="0" allowfullscreen></iframe>
 			<div id="postmort">
 			<p>
 				I am currently taking a Game Design class in college, and this is my group's semester long project.
