--- a/beck.html
+++ b/beck.html
@@ -206,7 +206,7 @@
 		}
 
 	</style>
-	<link rel="icon" href="grifficon.png">
+	<link rel="icon" href="images/grifficon.png">
 	<title>Beck & Chuck</title>
 
 	<body>
@@ -218,7 +218,7 @@
 			
 			<p id="page_subtitle">Farseer, XNA</p>
 			<br>
-			<img id="project_image" src="title.png" width = "250">
+			<img id="project_image" src="images/title.png" width = "250">
 
 
 
