--- a/boids.html
+++ b/boids.html
@@ -196,7 +196,7 @@
 		}
 
 	</style>
-	<link rel="icon" href="grifficon.png">
+	<link rel="icon" href="images/grifficon.png">
 	<title>Boids</title>
 
 	<body>
@@ -208,7 +208,7 @@
 			
 			<p id="page_subtitle">Java, Netbeans, Processing</p>
 			<br>
-			<img id="project_image" src="boids.png" width = "250">
+			<img id="project_image" src="images/boids.png" width = "250">
 
 			<div id="project_text">
 			<p>
