--- a/cloud.html
+++ b/cloud.html
@@ -196,7 +196,7 @@
 		}
 
 	</style>
-	<link rel="icon" href="grifficon.png">
+	<link rel="icon" href="images/grifficon.png">
 	<title>Cloud</title>
 
 	<body>
@@ -208,7 +208,7 @@
 			
 			<p id="page_subtitle">Actionscript, Flixel</p>
 			<br>
-			<img id="project_image" src="cloudapp.png" width = "250">
+			<img id="project_image" src="images/cloudapp.png" width = "250">
 
 			<div id="project_text">
 			<p>
@@ -221,7 +221,7 @@
 				I did this project with my friend Max as part of the <a href="http://0hgame.eu/">0hr Game Jam</a>. We made this game in the extra hour gained by daylight savings time. Max provided all the artwork as I coded the game. It was super interesting to code under the constraint of having only an hour, it changed a lot of the usual development process. Cloud ended up being an art game about the power of abundance and not having "enough". 
 			</p><br>
 			<p>
-				The finished product can be found <a href="Cloud.swf">here</a>.
+				The finished product can be found <a href="media/Cloud.swf">here</a>.
 			</p>
 			
 			</div>
