--- a/mote.html
+++ b/mote.html
@@ -196,7 +196,7 @@
 		}
 
 	</style>
-	<link rel="icon" href="grifficon.png">
+	<link rel="icon" href="images/grifficon.png">
 	<title>Mote</title>
 
 	<body>
@@ -208,7 +208,7 @@
 			
 			<p id="page_subtitle">JQuery</p>
 			<br>
-			<img id="project_image" src="mote.png" width = "290">
+			<img id="project_image" src="images/mote.png" width = "290">
 
 			<div id="project_text">
 			<p>
