--- a/stories.html
+++ b/stories.html
@@ -199,7 +199,7 @@
 		}
 
 	</style>
-	<link rel="icon" href="grifficon.png">
+	<link rel="icon" href="images/grifficon.png">
 	<title>Stories</title>
 
 	<body>
@@ -211,7 +211,7 @@
 			
 			<p id="page_subtitle">Flask, JQuery, MongoDB</p>
 			<br>
-			<img id="project_image" src="stories.png" width = "250">
+			<img id="project_image" src="images/stories.png" width = "250">
 
 			<div id="project_text">
 			<p>
