--- a/ztb.html
+++ b/ztb.html
@@ -196,7 +196,7 @@
 		}
 
 	</style>
-	<link rel="icon" href="grifficon.png">
+	<link rel="icon" href="images/grifficon.png">
 	<title>Zombie Toddler Brawl</title>
 
 	<body>
@@ -208,7 +208,7 @@
 			
 			<p id="page_subtitle">Actionscript, Flixel</p>
 			<br>
-			<img id="project_image" src="brawl.png" width = "250">
+			<img id="project_image" src="images/brawl.png" width = "250">
 
 			<div id="project_text">
 			<p>
@@ -224,7 +224,7 @@
 				I never got around to finishing the product, but it served as good practice for me. I learned some of the do's and don'ts of architecting a system, and how games / simulations function.
 			</p><br>
 			<p>
-				The game as it currently stands in its unfinished state can be found <a href="ToddlerBrawl.swf">here</a>. There still remains a chance I'll go back to it someday.
+				The game as it currently stands in its unfinished state can be found <a href="media/ToddlerBrawl.swf">here</a>. There still remains a chance I'll go back to it someday.
 			</p>
 			
 			</div>
