--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 		}
 
 	</style>
-	<link rel="icon" href="grifficon.png">
+	<link rel="icon" href="images/grifficon.png">
 	<title>Griffin Brodman</title>
 
 	<body>
@@ -243,7 +243,7 @@
 					<span class="text">Github</span>
 				</li>
 				<li>
-					<a href="resume.pdf">&#xf0f6;</a>
+					<a href="media/resume.pdf">&#xf0f6;</a>
 					<span class="text">Resume</span>
 				</li>
 				<li>
@@ -262,7 +262,7 @@
 
 				<a class="project" href="stories.html">
 					<div class="imgcontain">
-						<img src="stories.png" alt="placeholder image"\>
+						<img src="images/stories.png" alt="placeholder image"\>
 					</div>
 					<h3>Stories</h3>
 					<p class="minidescription">
@@ -271,7 +271,7 @@
 				</a>
 				<a class="project" href="mote.html">
 					<div class="imgcontain">
-						<img src="mote.png" alt="placeholder image"\>
+						<img src="images/mote.png" alt="placeholder image"\>
 					</div>
 					<h3>Mote</h3>
 					<p class="minidescription">
@@ -280,7 +280,7 @@
 				</a>
 				<a class="project" href="helix.html">
 					<div class="imgcontain">
-						<img src="helix.png" alt="placeholder image"\>
+						<img src="images/helix.png" alt="placeholder image"\>
 					</div>
 					<h3>Helix</h3>
 					<p class="minidescription">
@@ -290,7 +290,7 @@
 
 				<a class="project" href="beck.html">
 					<div class="imgcontain">
-						<img src="end.png" alt="placeholder image"\>
+						<img src="images/end.png" alt="placeholder image"\>
 					</div>
 					<h3>Beck & Chuck</h3>
 					<p class="minidescription">
@@ -300,7 +300,7 @@
 
 				<a class="project" href="cloud.html">
 					<div class="imgcontain">
-						<img src="cloud.png" alt="placeholder image"\>
+						<img src="images/cloud.png" alt="placeholder image"\>
 					</div>
 					<h3>Cloud</h3>
 					<p class="minidescription">
@@ -310,7 +310,7 @@
 				
 				<a class="project" href="ztb.html">
 					<div class="imgcontain">
-						<img src="brawl.png" height="80" alt="placeholder image"\>
+						<img src="images/brawl.png" height="80" alt="placeholder image"\>
 					</div>
 					<h3>ZTB</h3>
 					<p class="minidescription">
@@ -320,7 +320,7 @@
 								
 				<a class="project" href="boids.html">
 					<div class="imgcontain">
-						<img src="boids.png" alt="placeholder image"\>
+						<img src="images/boids.png" alt="placeholder image"\>
 					</div>
 					<h3>Boids</h3>
 					<p class="minidescription">
@@ -330,7 +330,7 @@
 
 				<a class="project" href="qb.html">
 					<div class="imgcontain">
-						<img src="box.png" alt="placeholder image"\>
+						<img src="images/box.png" alt="placeholder image"\>
 					</div>
 					<h3>Qb</h3>
 					<p class="minidescription">
