--- a/qb.html
+++ b/qb.html
@@ -196,7 +196,7 @@
 		}
 
 	</style>
-	<link rel="icon" href="grifficon.png">
+	<link rel="icon" href="images/grifficon.png">
 	<title>Qb</title>
 
 	<body>
@@ -208,7 +208,7 @@
 			
 			<p id="page_subtitle">Arduino, Python </p>
 			<br>
-			<img id="project_image" src="box.png" width = "250">
+			<img id="project_image" src="images/box.png" width = "250">
 
 			<div id="project_text">
 			<p>
