--- a/cloud.html
+++ b/cloud.html
@@ -3,9 +3,18 @@
 <head>		
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/project.css">
+	<style>
+	@media (max-width: 870px)
+		{
+			#hr {
+				margin-top: -80px;
+			}
+		}
+
+	</style>
 	<link rel="icon" href="images/grifficon.png">
 	<title>Cloud</title>
-</head>
+	</head>
 	<body>
 
 		<div id="content">
