--- a/stories.html
+++ b/stories.html
@@ -5,6 +5,15 @@
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/project.css">
 	<link rel="icon" href="images/grifficon.png">
+	<style>
+	@media (max-width: 870px)
+		{
+			#project_text {
+				height: 220px;
+			}
+		}
+
+	</style>
 	<title>Stories</title>
 	</head>
 	<body>
