--- a/beck.html
+++ b/beck.html
@@ -35,12 +35,14 @@
 <br><br>
 			<div id="postmort">
 			<p>
-				I am currently taking a Game Design class in college, and this is my group's semester long project.
+				I took intro to game design as a software development class my sophomore year. Four programmers were paired with two designers, and we had the entire semester to make a single game, to be presented at an end of year showcase.
 			</p><br>
 			<p>
-				Right now the project is very much a work in progress, updates will soon follow.
+				I was the Lead Programmer of the project, responsible for architecting the system, submitting dependancy diagrams and design documents, and doing a large chuck of the programming.
 			</p><br>
-
+			<p>
+				After the semester ended, we submitted and got our game accepted to be showcased in the <a href="http://bostonfig.com/">Boston Festival of Indie Games</a>
+			</p><br>
 			
 			</div>
 <br>
