Added stuff about Beck

--- a/beck.html
+++ b/beck.html
@@ -35,10 +35,13 @@
 <br><br>
 			<div id="postmort">
 			<p>
-				I took intro to game design as a software development class my sophomore year. Four programmers were paired with two designers, and we had the entire semester to make a single game, to be presented at an end of year showcase.
+				I took intro to game design as a software development class during my sophomore year. Four programmers were paired with two designers, and we had the entire semester to make a single game, to be presented at an end of year showcase.
 			</p><br>
 			<p>
 				I was the Lead Programmer of the project, responsible for architecting the system, submitting dependancy diagrams and design documents, and doing a large chuck of the programming.
+			</p><br>
+			<p>
+				Our game was an action platformer, similar to Dustforce or Super Meat Boy. Each level consisted of Chucking a deathball at robot enemies to destroy them, and making it safely to the teleporter at the end of the level.
 			</p><br>
 			<p>
 				After the semester ended, we submitted and got our game accepted to be showcased in the <a href="http://bostonfig.com/">Boston Festival of Indie Games</a>
