--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<span class="text">Github</span>
 				</li>
 				<li>
-					<a href="media/resume.pdf">&#xf0f6;</a>
+					<a href="media/GriffinBrodmanOnlineResume.pdf">&#xf0f6;</a>
 					<span class="text">Resume</span>
 				</li>
 				<li>
