--- a/index.html
+++ b/index.html
@@ -34,7 +34,26 @@
 
 
 			<div id="projectsarea">
-
+				<a class="project" href="maize.html">
+					<div class="imgcontain">
+						<img src="images/maize.jpg" alt="placeholder image"\>
+					</div>
+					<h3>Maize</h3>
+					<p class="minidescription">
+						Slither and Crawl
+					</p>
+				</a>
+<!--
+				<a class="project" href="polygons.html">
+					<div class="imgcontain">
+						<img src="images/mona.png" alt="placeholder image"\>
+					</div>
+					<h3>Polygons</h3>
+					<p class="minidescription">
+						Procedural Images
+					</p>
+				</a>
+-->
 				<a class="project" href="stories.html">
 					<div class="imgcontain">
 						<img src="images/stories.png" alt="placeholder image"\>
