--- a/polygons.html
+++ b/polygons.html
@@ -5,39 +5,37 @@
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/project.css">
 	<link rel="icon" href="images/grifficon.png">
-	<title>Helix Confessional</title>
+	<title>Procedural Image Generation</title>
 	</head>
 	<body>
 
 		<div id="content">
 
 			
-			<h1><span id="project_title">Helix</span> Confessional</h1>
+			<h1><span id="project_title">Procedural</span>
+Image Generation</h1>
 			
-			<p id="page_subtitle">HTML, CSS, PHP, MySQL</p>
+			<p id="page_subtitle">Genetic Algorithms, OpenCV, Python</p>
 			<br>
-			<img id="project_image" src="images/helixapp.png" width = "250">
+			<img id="project_image" src="images/star.jpg" width = "270" height = "175">
 
 			<div id="project_text">
 			<p>
-				Confess your sins! Submit your confessions to the Helix Fossil, and see if you are forgiven. And when you're done, make sure to stop by to see what other people have been confessing.
+				Using Genetic Algorithms and generating random transparent, colored polygons, to try to match a source image.
 			</p>
 			</div>
 <hr>
 			<div id="postmort">
 			<p>
-				I'd been meaning to explore Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I set myself a goal of a 4-5 day turnaround to publish the app, to make sure it stayed relevant and to push me to actually finish it. I used redhat's openshift platform to deploy the app, and learned MySQL in the process. 
+				For my artificial intelligence practicum, my partner and I decided to apply Genetic Algorithms to problems previously solved with Hill-Stepping, and see if we could improve performance.
 			</p><br>
 			<p>
-				My friend Gabe agreed to draw the illustrations and my friend PJ helped by sending me his photo-shopped designs of the site, which I matched as closely as possible.
+				We had seen projects online of people randomly generating polygons to a set of polygons, drawing them, seeing if the new set matched a source image better than the old one, if so keeping it, else throwing it away. This was basic Hill-Stepping, and we wanted to see if Genetic Algorithms could result in increased performance.
 			</p><br>
 			<p>
-				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small “practice” app. 
+				To do this, we wrote our own program in python, with both Hill-Stepping and Genetic Algorithms, and compared their performance. Our findings and what we learned can be summarized in the official report found <a href="media/report.pdf">here</a>.
 			</p><br>
-			<p>
-				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. This version no longer takes input, and is filled with dummy data so that all responses remain appropriate.
-			</p>
-			
+
 			</div>
 <br>
 		<div id="back"><a href="index.html">&#xf0a8; </a> </div>
