Taking away the s

--- a/polygons.html
+++ b/polygons.html
@@ -27,7 +27,7 @@ Image Generation</h1>
 <hr>
 			<div id="postmort">
 			<p>
-				For my artificial intelligence practicum, my partner, <a href="https://akhilaananthram.com">Akhila</a>, and I decided to apply Genetic Algorithms to problems previously solved with Hill-Stepping, and see if we could improve performance.
+				For my artificial intelligence practicum, my partner, <a href="http://akhilaananthram.com">Akhila</a>, and I decided to apply Genetic Algorithms to problems previously solved with Hill-Stepping, and see if we could improve performance.
 			</p><br>
 			<p>
 				We had seen projects online of people randomly generating polygons to a set of polygons, drawing them, seeing if the new set matched a source image better than the old one, if so keeping it, else throwing it away. This was basic Hill-Stepping, and we wanted to see if Genetic Algorithms could result in increased performance.
