--- a/ddblog/index.html
+++ b/ddblog/index.html
@@ -27,17 +27,18 @@
 	<main>
 		<div class="blogpost">
 			<h1> Lorem Ipsum! </h1>
-			<h2> By Griffin Brodman . 3/16/2015 <h2>
+			<h2> By Griffin Brodman &middot; 3/16/2015 <h2>
 			<hr>
 			<p>But what thinks Lazarus? Can he warm his blue hands by holding them up to the grand northern lights? Would not Lazarus rather be in Sumatra than here? Would he not far rather lay him down lengthwise along the line of the equator; yea, ye gods! go down to the fiery pit itself, in order to keep out this frost?</p>
-			<div class="readmore"> READ FULL POST </div>
+			<div class="readmore"> <a href="">READ FULL POST </a></div>
 		</div>
 
 		<div class="blogpost">
 			<h1> Lorem Ipsum! </h1>
-			<h2> By Griffin Brodman . 3/16/2015 <h2>
+			<h2> By Griffin Brodman &middot; 3/16/2015 <h2>
 			<hr>
 			<p>But what thinks Lazarus? Can he warm his blue hands by holding them up to the grand northern lights? Would not Lazarus rather be in Sumatra than here? Would he not far rather lay him down lengthwise along the line of the equator; yea, ye gods! go down to the fiery pit itself, in order to keep out this frost?</p>
+			<div class="readmore"> <a href="">READ FULL POST </a></div>
 		</div>
 	</main>
 
