--- a/ddblog/index.html
+++ b/ddblog/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 	<nav>
-		<h1><a href=".">DND Blog Name</a></h1>
+		<h1><a href="">DND Blog Name</a></h1>
 		<ul>
 			<li><a href="">Home</a></li>
 			<li><a href="">Encounters</a></li>
