--- a/ddblog/index.html
+++ b/ddblog/index.html
@@ -10,13 +10,13 @@
 	<nav>
 		<h1><a href="">DND Blog Name</a></h1>
 		<ul>
-			<li><a href="">Home</a></li>
-			<li><a href="">Encounters</a></li>
-			<li><a href="">Characters</a></li>
-			<li><a href="">Guides</a></li>
-			<li><a href="">Monsters</a></li>
-			<li><a href="">Stories</a></li>
-			<li><a href="">Contact Us</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="encounters.html">Encounters</a></li>
+			<li><a href="characters.html">Characters</a></li>
+			<li><a href="guides.html">Guides</a></li>
+			<li><a href="monsters.html">Monsters</a></li>
+			<li><a href="stories.html">Stories</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 	</nav>
 
