--- a/ddblog/encounters.html
+++ b/ddblog/encounters.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="css/common.css">
-		<link rel="stylesheet" href="css/homepage.css">
+		<link rel="stylesheet" href="css/encountermain.css">
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300italic,400italic,600italic,400,300,600,700' rel='stylesheet' type='text/css'>
 		<title>Encounters</title>
 	</head>
@@ -19,6 +19,35 @@
 			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 	</nav>
+
+	<header>
+		<h1>Encounters</h1>
+	</header>
+	
+	<main>
+		<h2> TABLE OF CONTENTS: </h2>
+
+
+		<a class="encounter" href="encounter1.html">
+			The Three Monkeys
+		</a>
+
+		<a class="encounter" href="">
+			House Of Traps
+		</a>
+		<a class="encounter" href="">
+			Jeweled Statue
+		</a>
+		<a class="encounter" href="">
+			Encounter Four
+		</a>
+		<a class="encounter" href="">
+			Butt Lord
+		</a>
+
+
+		
+	</main>
 
 		
 	</body>
