--- a/ddblog/index.html
+++ b/ddblog/index.html
@@ -1,48 +1,26 @@
-<html>
-	<head>
-		<link rel="stylesheet" href="css/common.css">
-		<link rel="stylesheet" href="css/homepage.css">
-		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300italic,400italic,600italic,400,300,600,700' rel='stylesheet' type='text/css'>
-		<title>D&D Blog</title>
-	</head>
+---
+layout: default
+---
 
-	<body>
-	<nav>
-		<h1><a href="">DND Blog Name</a></h1>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="encounters.html">Encounters</a></li>
-			<li><a href="characters.html">Characters</a></li>
-			<li><a href="guides.html">Guides</a></li>
-			<li><a href="monsters.html">Monsters</a></li>
-			<li><a href="stories.html">Stories</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
-		</ul>
-	</nav>
+<head>
+	<link rel="stylesheet" href="/css/homepage.css">
+</head>
 
-	<header>
-		<h1>D&D Title</h1>
-		<h2>Tales of Lorem - Ipsum Upsom Wupsom Mupsom </h2>
-	</header>
+<header>
+	<h1>{{ site.title }}</h1>
+	<h2>Tales of Lorem - Ipsum Upsom Wupsom Mupsom </h2>
+</header>
 
-	<main>
-		<div class="blogpost">
-			<h1> Lorem Ipsum! </h1>
-			<h2> By Griffin Brodman &middot; 3/16/2015 </h2>
-			<hr>
-			<p>But what thinks Lazarus? Can he warm his blue hands by holding them up to the grand northern lights? Would not Lazarus rather be in Sumatra than here? Would he not far rather lay him down lengthwise along the line of the equator; yea, ye gods! go down to the fiery pit itself, in order to keep out this frost?</p>
-			<a class="readmore" href="">READ FULL POST </a>
-		</div>
+<main>
 
-		<div class="blogpost">
-			<h1> Lorem Ipsum! </h1>
-			<h2> By Griffin Brodman &middot; 3/16/2015 </h2>
-			<hr>
-			<p>But what thinks Lazarus? Can he warm his blue hands by holding them up to the grand northern lights? Would not Lazarus rather be in Sumatra than here? Would he not far rather lay him down lengthwise along the line of the equator; yea, ye gods! go down to the fiery pit itself, in order to keep out this frost?</p>
-			<a class="readmore" href="">READ FULL POST </a>
-		</div>
-	</main>
+	{% for post in site.posts reversed %}
+	<div class="blogpost">
+		<h1> {{ post.title }} </h1>
+		<h2> By {{ post.author }} &middot; {{ post.date | date: "%b %-d, %Y" }} </h2>
+		<hr>
+		<p> {{ post.content | truncatewords:50 }} </p>
+		<a class="readmore" href="{{ post.url | prepend: site.baseurl }}">READ FULL POST </a>
+	</div>
+	{% endfor %}
 
-		
-	</body>
-</html>
+</main>
