More jekyll bugfixes.

--- a/ddblog/index.html
+++ b/ddblog/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <head>
-	<link rel="stylesheet" href="/css/homepage.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/homepage.css">
 </head>
 
 <header>
