First update from DDBlog to Wellness blog

--- a/ddblog/index.html
+++ b/ddblog/index.html
@@ -3,26 +3,23 @@
 		<link rel="stylesheet" href="css/common.css">
 		<link rel="stylesheet" href="css/homepage.css">
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300italic,400italic,600italic,400,300,600,700' rel='stylesheet' type='text/css'>
-		<title>D&D Blog</title>
+		<title>Griffin Brodman</title>
 	</head>
 
 	<body>
 	<nav>
-		<h1><a href="">DND Blog Name</a></h1>
+		<h1><a href="">Griffin Brodman</a></h1>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="encounters.html">Encounters</a></li>
-			<li><a href="characters.html">Characters</a></li>
-			<li><a href="guides.html">Guides</a></li>
-			<li><a href="monsters.html">Monsters</a></li>
-			<li><a href="stories.html">Stories</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="">About Me</a></li>
+			<li><a href="">Quotes</a></li>
+
 		</ul>
 	</nav>
 
 	<header>
-		<h1>D&D Title</h1>
-		<h2>Tales of Lorem - Ipsum Upsom Wupsom Mupsom </h2>
+		<h1>Mental Wellness</h1>
+		<h2>If you read my blog you'll be happier maybe</h2>
 	</header>
 
 	<main>
