--- a/ddblog/index.html
+++ b/ddblog/index.html
@@ -11,15 +11,15 @@
 		<h1><a href="">Griffin Brodman</a></h1>
 		<ul>
 			<li><a href="index.html">Home</a></li>
+			<li><a href="archive.html">Archive</a></li>
 			<li><a href="">About Me</a></li>
 			<li><a href="">Quotes</a></li>
-
 		</ul>
 	</nav>
 
 	<header>
 		<h1>Mental Wellness</h1>
-		<h2>If you read my blog you'll be happier maybe</h2>
+		<h2>or "If you read my blog you'll be happier, maybe"</h2>
 	</header>
 
 	<main>
