--- a/ddblog/archive.html
+++ b/ddblog/archive.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="css/common.css">
-		<link rel="stylesheet" href="css/encountermain.css">
+		<link rel="stylesheet" href="css/archive.css">
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300italic,400italic,600italic,400,300,600,700' rel='stylesheet' type='text/css'>
 		<title>Encounters</title>
 	</head>
@@ -25,21 +25,21 @@
 		<h2> TABLE OF CONTENTS: </h2>
 
 
-		<a class="encounter" href="encounter1.html">
-			The Three Monkeys
+		<a class="encounter" href="blog1.html">
+			Making a Blog
 		</a>
 
 		<a class="encounter" href="">
-			House Of Traps
+			Blog Post Two
 		</a>
 		<a class="encounter" href="">
-			Jeweled Statue
+			Blog Post Three
 		</a>
 		<a class="encounter" href="">
-			Encounter Four
+			Blog Post Four
 		</a>
 		<a class="encounter" href="">
-			Butt Lord
+			Blog Post Five
 		</a>
 
 
