Added two new pages

--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
 
 
 			<div id="projectsarea">
+
+				<a class="project" href="riot.html">
+					<div class="imgcontain">
+						<img src="images/riot.jpg" alt="placeholder image"\>
+					</div>
+					<h3>Riot Internship</h3>
+					<p class="minidescription">
+						Dev Management
+					</p>
+				</a>
+
+
 				<a class="project" href="maize.html">
 					<div class="imgcontain">
 						<img src="images/maize.jpg" alt="placeholder image"\>
@@ -51,6 +63,16 @@
 					<h3>Polygons</h3>
 					<p class="minidescription">
 						Procedural Images
+					</p>
+				</a>
+
+				<a class="project" href="lockheed.html">
+					<div class="imgcontain">
+						<img src="images/lockheed2.png" alt="placeholder image"\>
+					</div>
+					<h3>LM Internship</h3>
+					<p class="minidescription">
+						Software Dev
 					</p>
 				</a>
 
