iReplaced Online Resume

--- a/ddblog/archive.html
+++ b/ddblog/archive.html
@@ -25,7 +25,7 @@
 		<h2> TABLE OF CONTENTS: </h2>
 
 
-		<a class="encounter" href="blog1.html">
+		<a class="encounter" href="">
 			Making a Blog
 		</a>
 
