--- a/new/index.html
+++ b/new/index.html
@@ -1,3 +1,4 @@
+<DOCTYPE html>
 <html>
 <head>
 <title>Griffin Brodman</title>
@@ -14,19 +15,22 @@
 <body>
 <div id = "content">
 <div id = "top">
-
-	<h1><span style="color: #FFFFFF;">Griffin </span> Brodman</h1>
-	<img id = "me" src = "./images/grif.png">
-	<div id = "quote"> "We should be helping each other grow" - Shawn Chamber </div>
+	<div class = "wow bounceInUp">
+		<h1><span style="color: #FFFFFF;">Griffin </span> Brodman</h1>
+		<img id = "me" src = "./images/grif.png">
+		<div id = "quote"> "We should be helping each other grow" - Shawn Chamber </div>
+	</div>
 </div>
 
 <div id = "purpose" class ="wow bounceInUp">
-I believe that great leadership looks like using every aspect of yourself, body and mind, in service of others. I think that great leaders inspire, lorem ipsum arete. In at pretium ante, a cursus dui. Nunc molestie magna in maximus pellentesque. Proin est quam, mollis nec hendrerit pharetra, sollicitudin et eros. Quisque tristique at metus vel dictum. Duis eget diam fermentum, luctus nulla in, feugiat felis. Nullam scelerisque quis arcu ut ornare. Praesent tortor dui, dignissim quis laoreet vel, suscipit in lorem. Donec sapien nibh, convallis at imperdiet non, maximus a sem. </div>
+<h1>LEADERSHIP </h1>
+<p>I believe that great leadership looks like using every aspect of yourself, body and mind, in service of others. I think that great leaders inspire, lorem ipsum arete. In at pretium ante, a cursus dui. Nunc molestie magna in maximus pellentesque. Proin est quam, mollis nec hendrerit pharetra, sollicitudin et eros. Quisque tristique at metus vel dictum. Duis eget diam fermentum, luctus nulla in, feugiat felis. Nullam scelerisque quis arcu ut ornare. Praesent tortor dui, dignissim quis laoreet vel, suscipit in lorem. Donec sapien nibh, convallis at imperdiet non, maximus a sem.</p>
+<p>I believe that great leadership looks like using every aspect of yourself, body and mind, in service of others. I think that great leaders inspire, lorem ipsum arete. In at pretium ante, a cursus dui. Nunc molestie magna in maximus pellentesque. Proin est quam, mollis nec hendrerit pharetra, sollicitudin et eros. Quisque tristique at metus vel dictum. Duis eget diam fermentum, luctus nulla in, feugiat felis. Nullam scelerisque quis arcu ut ornare. Praesent tortor dui, dignissim quis laoreet vel, suscipit in lorem. Donec sapien nibh, convallis at imperdiet non, maximus a sem.</p>  </div>
 <br>
 <br>
 
 <!-- Click one, expands the screen -->
-<div id = "strengths"> <h1 style="color: C77966;"> WHO I AM </h1>
+<div id = "strengths" class = "wow bounceInUp"> <h1 style="color: C77966;"> WHO I AM </h1>
 <div class = "strengthSection">
     <img src="./images/owl.svg" width = "80px" class = "strengthIcon">
   	<h1> SAGE </h1>
@@ -48,11 +52,18 @@ I believe that great leadership looks like using every aspect of yourself, body 
 
 </div>
 
-<div id = "minecart"> <h1> DERAILERS </h1>
+<div id = "minecart" > <h1 class = "wow bounceInUp"> DERAILERS </h1>
 
-<div id = "mineGraphic"> CART</div>
+	<div id = "mineGraphic" class = "wow bounceInUp">
+	<img src = "./images/anxiety.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:-10px;margin-top:-10px;" data-title="Anxiety" data-text = "a">
+	<img src = "./images/lion.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:180px;margin-top:-10px;" data-title="Courage" data-text = "b">
+	<img src = "./images/scales.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:-10px;margin-top:180px;" data-title="butts" data-text = "c">
+	<img src = "./images/scales.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:180px;margin-top:180px;" data-title="Ethics" data-text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero. Nullam quis auctor ipsum. Etiam eget metus mi. Aliquam et arcu luctus, commodo mauris eget, auctor velit. Nulla fringilla sodales libero, quis condimentum lorem ultricies sit amet. In venenatis ex nec ex placerat, sit amet auctor est laoreet. Quisque purus sem, scelerisque sit amet dignissim id, tempus a felis. Nullam venenatis blandit porttitor. Mauris elementum vitae ligula vel aliquet. Donec vulputate, lacus molestie sollicitudin pellentesque, nisi libero placerat risus, quis iaculis tellus dolor sit amet turpis. Duis rutrum neque at diam condimentum vestibulum." >
+	<div id = "centralCircle"><p>Derailers</p></div>
 
-<div id = "mineText">On my leadership journey, I know that many potential challenges will arise, and many factors will seek to derail me. To the left, I have highlighted some of my potential derailers, as well as the factors that I know will keep me "on track". </div>
+ 	</div>
+
+<div id = "mineText" class = "wow bounceInUp">On my leadership journey, I know that many potential challenges will arise, and many factors will seek to derail me. To the left, I have highlighted some of my potential derailers, as well as the factors that I know will keep me "on track". </div>
 
 
 
@@ -67,10 +78,22 @@ How have I grown through the class and working on a team
 Personal and proffessional goals
 </div>
 
-<div id = "footer">
-<p> Contact me: </p>
-<p>Copyright 2015 | Special Thanks to Erica and Werner</p>
-<img src = "./images/logo.svg">
+<div id = "footer"> <!--Make horizontally align -->
+	<div id = "contact">
+	<h1> Contact me: </h1>
+	<p>gb282@cornell.edu</p>
+	<p>(908) 907-4431</p>
+	<p>linkedin.com/in/griffinbrodman</p>
+	<br>
+	<p>Copyright Griffin 2015</p>
+	<img src = "./images/logo.svg">
+	</div>
+	<div id = "lastThoughts">
+	<h1>Final Thoughts </h1>
+	<p>Lorem Ipsum</p>
+	</div>
+
+
 </div>
 
 
@@ -78,6 +101,10 @@ Personal and proffessional goals
 
 
 </div>
+
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js">
+</script>
+<script src = "./js/scripts.js"> </script>
 </body>
 
 
